Mise à jour sans les fichiers volumineux

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-.Rproj.user/ 
-.RData 
-.Rhistory 
-scripts/script2/.RData 
-scripts/script2/.RDataTmp 
-data/raw/globalterrorismdb_0718dist.csv 
-data/processed/gtd_clean.csv 
-*.RDataTmp 
-.Rproj.user/*/ctx/ctx-*/environmentTmp 
-.Rproj.user
+.Rproj.user/
+.RData
+.Rhistory
+scripts/script2/.RData
+scripts/script2/.RDataTmp
+data/globalterrorismdb_0718dist.csv
+data/raw/globalterrorismdb_0718dist.csv
+data/processed/gtd_clean.csv
+*.RDataTmp
+**/environmentTmp
